feat: add unit test to getUrlDetails and parseReferenceEntity in FactService